record:并查集